DBApp.updateTable now works on multiple pages
Tested-by: Zeyad Mohamed Attia <85710632+zeyadattia5@users.noreply.github.com>

Working for unindexed tables only (for now)